fix: fix overlapping that caused buttons to not works

--- a/tyyli.css
+++ b/tyyli.css
@@ -397,7 +397,7 @@ a { color: var(--accent); }
   display: flex;
   gap: 10px;
   justify-content: center;
-  margin: -30px auto 0 auto;
+  margin: -15px;
 }
 #videoControls button {
   padding: 6px 12px;
